# python-package-exercise-project-3-team-3

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
demonstration/: demonstration.py
src/pyrecommendg3/: __main__.py  food_list.py  movie_list.py  music_list.py  recommendations.py
tests/: test_food.py  test_movie.py  test_music.py  test_view_all.py
